--- a/frontend/src/app/layout/header/header.component.html
+++ b/frontend/src/app/layout/header/header.component.html
@@ -64,7 +64,7 @@
 
   <nav class="navbar navbar-expand-lg navbar-light theme-nav" *ngIf="loggedUserInfo?.isLoggedIn && loggedUserInfo?.role.includes(1)">
     <div class="container">
-      <a href="index.html" class="navbar-brand" ><img src="assets/images/logo.png"/></a>
+      <a  [routerLink]="['/home']" href="javascript:;" class="navbar-brand" ><img src="assets/images/logo.png"/></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
