--- a/frontend/src/app/modules/features/employer/post-job/requirement-criteria/requirement-criteria.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/requirement-criteria/requirement-criteria.component.html
@@ -37,8 +37,11 @@
   <div class="row mt-2" *ngFor="let ticket of t.controls; let i = index; let last = last">
     <ng-container [formGroup]="ticket">
       <div class="col-lg-4 col-md-6">
-        <input formControlName="domain" type="text" class="form-control"
-          [placeholder]="'postJob.sapModule' | translate">
+        <ng-select appMarkAsterisk [items]="skillArray?.items" bindLabel="tag" [placeholder]="'postJob.sapModule' | translate" appendTo="body"
+          formControlName="domain">
+        </ng-select>
+        <!-- <input formControlName="domain" type="text" class="form-control"
+          [placeholder]="'postJob.sapModule' | translate"> -->
         <app-control-messages [control]="ticket['controls']['domain']"></app-control-messages>
       </div>
 
@@ -67,7 +70,7 @@
     <div class="col-lg-12 col-md-6">
       <div class=" form-group">
         <label>{{"postJob.knowledgeOnOtherSapSkills" | translate }} </label>
-        <ng-select appMarkAsterisk [items]="skillArray?.items" bindLabel="tag" placeholder="Select item" appendTo="body" multiple="true"
+        <ng-select appMarkAsterisk [items]="skillArray?.items"  addTagText="Add Other Skill" bindLabel="tag" placeholder="Select item" appendTo="body" multiple="true"
           formControlName="skills">
         </ng-select>
         <app-control-messages [control]="f['skills']"></app-control-messages>
@@ -79,7 +82,7 @@
     <div class="col-lg-9 col-md-6">
       <div class=" form-group">
         <label>{{"postJob.programmingSkills" | translate }}</label>
-        <ng-select appMarkAsterisk (add)="onAdd($event)" [addTag]="true" bindValue="label" bindLabel="label" placeholder="Select item" appendTo="body" multiple="true"
+        <ng-select appMarkAsterisk (add)="onAdd($event)" [addTag]="true" addTagText="Add Programming Skill" bindValue="label" bindLabel="label" placeholder="Select item" appendTo="body" multiple="true"
           formControlName="programming_skills">
         </ng-select>
         <app-control-messages [control]="f['programming_skills']"></app-control-messages>
@@ -97,7 +100,7 @@
     <div class="col-lg-6 col-md-6">
       <div class=" form-group">
         <label>{{"postJob.niceToHave" | translate }} </label>
-        <ng-select appMarkAsterisk [addTag]="true" bindValue="label" bindLabel="label" placeholder="Select item" appendTo="body" multiple="true"
+        <ng-select appMarkAsterisk [addTag]="true"  addTagText="Add Nice To Have" bindValue="label" bindLabel="label" placeholder="Select item" appendTo="body" multiple="true"
           formControlName="optinal_skills">
         </ng-select>
         <app-control-messages [control]="f['optinal_skills']"></app-control-messages>
@@ -106,7 +109,7 @@
     <div class="col-lg-6 col-md-6">
       <div class=" form-group">
         <label>{{"postJob.certification" | translate }} </label>
-        <ng-select appMarkAsterisk [addTag]="true" bindValue="label" bindLabel="label" placeholder="Select item" appendTo="body" multiple="true"
+        <ng-select appMarkAsterisk [addTag]="true" addTagText="Add Certification" bindValue="label" bindLabel="label" placeholder="Select item" appendTo="body" multiple="true"
           formControlName="certification">
         </ng-select>
         <app-control-messages [control]="f['certification']"></app-control-messages>
