Post Job completed around 50%

--- a/frontend/src/app/modules/features/common/reset-password/reset-password.component.html
+++ b/frontend/src/app/modules/features/common/reset-password/reset-password.component.html
@@ -19,6 +19,19 @@
           </div>
           <app-control-messages [control]="f['confirmPassword']"></app-control-messages>
         </div>
+        <ng-container *ngIf="formError && formError?.length > 0;">
+
+          <p class="alert alert-danger" *ngFor="let item of formError; let i=index">
+            <ng-container *ngFor="let rule of item?.rules">
+              <i class="fa fa-times-circle pr-2" style="font-size:18px;color:red"></i>
+              {{rule.message}}
+            </ng-container>
+          </p>
+          <p class="alert alert-danger">
+            <i class="fa fa-times-circle pr-2" style="font-size:18px;color:red"></i>
+            Your verification has been failed. Please try again.
+          </p>
+        </ng-container>
         <div class="form-group mt-5">
           <button type="submit"
           class="btn btn-block btn-lg btn-theme-blue"
