--- a/frontend/src/app/layout/header/header.component.html
+++ b/frontend/src/app/layout/header/header.component.html
@@ -80,10 +80,10 @@
            <span data-letters="CA"> Company Admin</span>
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <li class="submenu"> <a class="dropdown-item" href="job-company-dashboard.html">Dashboard</a></li>
-            <li class="submenu"> <a class="dropdown-item" href="job-company-profile.html">Profile</a></li>
-            <li class="submenu"> <a class="dropdown-item" href="job-notifications.html">Notification</a></li>
-            <li class="submenu"> <a class="dropdown-item" href="job-setting.html">Setting</a></li>
+            <li class="submenu"> <a [routerLink]="['/employer/dashboard']" class="dropdown-item" href="javascript:;">Dashboard</a></li>
+            <li class="submenu"> <a [routerLink]="['/employer/profile']" class="dropdown-item" href="javascript:;">Profile</a></li>
+            <li class="submenu"> <a [routerLink]="['/notification']" class="dropdown-item" href="javascript:;">Notification</a></li>
+            <li class="submenu"> <a [routerLink]="['/employer/setting']" class="dropdown-item" href="javascript:;">Setting</a></li>
             <li class="submenu"> <a (click)="logout()" class="dropdown-item" href="javascript:;">Logout</a></li>
           </ul>
           </li>
