--- a/frontend/src/app/modules/features/employer/post-job/requirement-criteria/requirement-criteria.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/requirement-criteria/requirement-criteria.component.html
@@ -20,7 +20,7 @@
     <div class="col-lg-12 col-md-6">
       <div class=" form-group">
         <label>{{"postJob.domainExperience" | translate }}</label>
-        <ng-select appMarkAsterisk [items]="industries?.items" bindLabel="name" [placeholder]="'postJob.sapModule' | translate" appendTo="body" multiple="true"
+        <ng-select  id="domainExperience" appMarkAsterisk [items]="industries?.items" bindLabel="name" [placeholder]="'postJob.sapModule' | translate" appendTo="body" multiple="true"
           formControlName="domain">
         </ng-select>
         <app-control-messages [control]="f['domain']"></app-control-messages>
@@ -37,8 +37,9 @@
   <div class="row mt-2" *ngFor="let ticket of t.controls; let i = index; let last = last">
     <ng-container [formGroup]="ticket">
       <div class="col-lg-4 col-md-6">
-        <ng-select appMarkAsterisk [items]="skillArray?.items" bindLabel="tag" [placeholder]="'postJob.sapModule' | translate" appendTo="body"
+        <ng-select (change)="onChangeSelectDomainEvent($event, i)" class="text-uppercase" id="domain_{{i}}" appMarkAsterisk bindLabel="tag" [placeholder]="'postJob.sapModule' | translate" appendTo="body"
           formControlName="domain">
+          <ng-option *ngFor="let item of skillArray?.items" [value]="item">{{item?.tag ? item?.tag?.split('-')[0] : ''}}</ng-option>
         </ng-select>
         <!-- <input formControlName="domain" type="text" class="form-control"
           [placeholder]="'postJob.sapModule' | translate"> -->
@@ -70,8 +71,9 @@
     <div class="col-lg-12 col-md-6">
       <div class=" form-group">
         <label>{{"postJob.knowledgeOnOtherSapSkills" | translate }} </label>
-        <ng-select appMarkAsterisk [items]="skillArray?.items"  addTagText="Add Other Skill" bindLabel="tag" placeholder="Select item" appendTo="body" multiple="true"
+        <ng-select class="text-uppercase" id="knowledgeOnOtherSapSkills" appMarkAsterisk (change)="onChangeSelectSkillEvent($event)" addTagText="Add Other Skill" bindLabel="tag" placeholder="Select item" appendTo="body" multiple="true"
           formControlName="skills">
+          <ng-option  *ngFor="let item of skillArray?.items" [value]="item">{{item?.tag ? item?.tag?.split('-')[0] : ''}}</ng-option>
         </ng-select>
         <app-control-messages [control]="f['skills']"></app-control-messages>
         <!-- <input type="text" class="form-control" value="SAP Mobility, SAP FICO, SAP BODS" data-role="tagsinput"> -->
@@ -82,7 +84,7 @@
     <div class="col-lg-9 col-md-6">
       <div class=" form-group">
         <label>{{"postJob.programmingSkills" | translate }}</label>
-        <ng-select appMarkAsterisk (add)="onAdd($event)" [addTag]="true" addTagText="Add Programming Skill" bindValue="label" bindLabel="label" placeholder="Select item" appendTo="body" multiple="true"
+        <ng-select id="programmingSkills" appMarkAsterisk [addTag]="true" addTagText="Add Programming Skill" bindValue="label" bindLabel="label" placeholder="Select item" appendTo="body" multiple="true"
           formControlName="programming_skills">
         </ng-select>
         <app-control-messages [control]="f['programming_skills']"></app-control-messages>
@@ -100,7 +102,7 @@
     <div class="col-lg-6 col-md-6">
       <div class=" form-group">
         <label>{{"postJob.niceToHave" | translate }} </label>
-        <ng-select appMarkAsterisk [addTag]="true"  addTagText="Add Nice To Have" bindValue="label" bindLabel="label" placeholder="Select item" appendTo="body" multiple="true"
+        <ng-select id="niceToHave" appMarkAsterisk [addTag]="true"  addTagText="Add Nice To Have" bindValue="label" bindLabel="label" placeholder="Select item" appendTo="body" multiple="true"
           formControlName="optinal_skills">
         </ng-select>
         <app-control-messages [control]="f['optinal_skills']"></app-control-messages>
@@ -109,7 +111,7 @@
     <div class="col-lg-6 col-md-6">
       <div class=" form-group">
         <label>{{"postJob.certification" | translate }} </label>
-        <ng-select appMarkAsterisk [addTag]="true" addTagText="Add Certification" bindValue="label" bindLabel="label" placeholder="Select item" appendTo="body" multiple="true"
+        <ng-select id="certification" appMarkAsterisk [addTag]="true" addTagText="Add Certification" bindValue="label" bindLabel="label" placeholder="Select item" appendTo="body" multiple="true"
           formControlName="certification">
         </ng-select>
         <app-control-messages [control]="f['certification']"></app-control-messages>
