--- a/frontend/src/app/modules/features/employer/posted-job/posted-job.component.html
+++ b/frontend/src/app/modules/features/employer/posted-job/posted-job.component.html
@@ -31,9 +31,8 @@
             </tr>
             </thead>
             <tbody>
-
-            <ng-container *ngIf="postedJobs?.items?.length > 0; else elseTemplate">
-              <tr *ngFor="let item of postedJobs?.items; let i=index">
+            <ng-container *ngIf="postedJobs?.length > 0; else elseTemplate">
+              <tr *ngFor="let item of postedJobs; let i=index">
                 <td><a href="javascript:;" [routerLink]="['/employer/job-detail-view']" routerLinkActive="router-link-active" >
                 {{item?.title}}</a></td>
                 <td>
@@ -57,19 +56,24 @@
                 </select>
                 </td>
                 <td class="text-center">
-                <a href="#" class="text-info mr-2"  data-toggle="tooltip" title="Edit"><i class="fas fa-edit"></i></a>
-                <a href="#" class="text-danger"   data-toggle="tooltip" title="Delete"><i class="fas fa-trash-alt"></i></a>
+                <a href="javascript:;" class="text-info mr-2"  data-toggle="tooltip" title="Edit"><i class="fas fa-edit"></i></a>
+                <a href="javascript:;" (click)="onDeletePostedJob(item?.id, i)" class="text-danger"   data-toggle="tooltip" title="Delete"><i class="fas fa-trash-alt"></i></a>
                 </td>
               </tr>
             </ng-container>
             <ng-template #elseTemplate>
               <tr>
-                <td colspan="9"></td>
+                <td colspan="9">No Record Found</td>
               </tr>
             </ng-template>
 
             </tbody>
           </table>
+        </div>
+        <div class="d-flex justify-content-center" *ngIf="postedJobMeta?.count > 0 && postedJobMeta?.total > 25">
+          <button (click)="onLoadMoreJob()" class="btn btn-theme-blue" type="button">
+            Load More
+          </button>
         </div>
       </div>
     </div>
