--- a/frontend/src/app/shared/component/login-form/login-form.component.html
+++ b/frontend/src/app/shared/component/login-form/login-form.component.html
@@ -3,7 +3,7 @@
   <h1>Login</h1>
   <div class="form-group">
     <label>Username</label>
-    <div appMarkAsterisk class="input-with-icon">
+    <div class="input-with-icon">
       <input type="email" class="form-control" [placeholder]="'Username'" formControlName="username"/>
       <i class="fas fa-user-alt"></i>
     </div>
@@ -11,7 +11,7 @@
   </div>
   <div class="form-group">
     <label>Password</label>
-    <div appMarkAsterisk class="input-with-icon">
+    <div class="input-with-icon">
       <input type="password" class="form-control" [placeholder]="'Password'" formControlName="password">
       <i class="fas fa-lock"></i>
     </div>
